# swe-grep

./: .gitignore  AGENTS.md  Cargo.toml  README.md  agent-prompt.md  agents.md
.github/workflows/: bench.yml
benchmarks/: default.json
crates/swe-grep-core/: Cargo.toml  build.rs
crates/swe-grep-core/proto/: swegrep.proto
crates/swe-grep-core/src/: bench.rs  cli.rs  lib.rs  main.rs  search.rs  telemetry.rs
crates/swe-grep-core/src/service/: grpc.rs  http.rs  mod.rs  server.rs
crates/swe-grep-core/src/tools/: ast_grep.rs  common.rs  fd.rs  mod.rs  rg.rs  rga.rs
crates/swe-grep-core/tests/: search_smoke.rs
crates/swe-grep-indexer/: Cargo.toml
crates/swe-grep-indexer/src/: lib.rs
docs/: agent-use.md  benchmark-summary.jsonl  benchmark-warm-getUser.json  benchmark-warm.json  benchmark.md  context_extraction_todo.md  integration.md  performance-tuning.md  quickstart.md  troubleshooting.md
fixtures/multi_lang/: App.swift
fixtures/multi_lang/config/: settings.yaml
fixtures/multi_lang/src/: app.ts  app.tsx  lib.rs
scripts/: bench_rg_vs_sweg.py  bench_startup.py  check_bench_regression.py  evaluate_bench.py  install-tools.sh
src/: cli.rs  main.rs  search.rs
src/tools/: ast_grep.rs  mod.rs  rg.rs
