[package]
name = "swe-grep-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "process", "io-util", "time", "sync", "fs"] }
futures = "0.3"
swe-grep-indexer = { path = "../swe-grep-indexer", optional = true }

[features]
default = []
indexing = ["swe-grep-indexer"]

[dev-dependencies]
tempfile = "3"
