[package]
name = "swe-grep"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "process", "io-util", "time", "sync", "fs", "signal"] }
futures = "0.3"
swe-grep-indexer = { path = "../swe-grep-indexer", optional = true }
axum = { version = "0.7", features = ["macros", "json"] }
hyper = { version = "1.3", features = ["server", "http1"] }
tokio-stream = "0.1"
tonic = { version = "0.11", features = ["transport"] }
prost = "0.12"
prost-types = "0.12"
tower = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
opentelemetry = { version = "0.22", features = ["metrics"] }
opentelemetry_sdk = { version = "0.22", features = ["metrics"] }
opentelemetry-prometheus = "0.15"
once_cell = "1.19"
prometheus = "0.13"

[features]
default = []
indexing = ["swe-grep-indexer"]

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tonic-build = "0.11"
protoc-bin-vendored = "3"
